--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <%= link_to 'All events', events_path %>
 
-<h2>Hi <%= @user.email %>, these are all your events:</h2>
+<h2>Hi <%= @user.username %>, these are all your events:</h2>
 
 <h2>Events you have created:</h2>
 <h3>Upcoming events:</h3>
