--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,14 @@
 
 <% if user_signed_in? %>
   <li>
-  <%= link_to  'Create Event',  new_event_path %>
+  <%= link_to "Home",  root_path%>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+ <%= link_to  'Create Event',  new_event_path %>
   <%= link_to 'See your Events', user_path(current_user.id) %>
   </li>
 <% else %>
-
+  <li><%= link_to "Sign Up",  new_user_registration_path%></li>
+  <li><%= link_to "Log in",  new_user_session_path%></li>
 <% end %>
 
 <h2>Upcoming Events</h2>
